# network

./: README.md  config.json  data.sh  main.py  pyproject.toml
src/: __init__.py  data_preprocessing.py  dual_network_gnn.py  evaluator.py  graph_builder.py  main.py  trainer.py
