[project]
name = "network"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "networkx>=3.4.2",
    "numpy>=2.2.6",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "sympy>=1.14.0",
    "torch>=2.0.0",
    "torch-geometric>=2.4.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "nltk>=3.8.0",
    "tqdm>=4.65.0",
]
